# OpenGL-Testing

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: actions.yml
include/: GLErrorCheck.h  IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.h
res/shaders/: shader.glsl  textureShader.glsl
src/: GLErrorCheck.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  Window.cpp
